--- a/package.json
+++ b/package.json
@@ -9,11 +9,6 @@
   "author": "Jackie Wong",
   "license": "MIT",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "morgan": "^1.10.0",
-    "node-sass": "^4.14.0",
-    "nodemon": "^2.0.3"
+    "node-sass": "^4.14.0"
   }
 }
