--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Jackie Wong",
   "license": "MIT",
   "dependencies": {
+    "gh-pages": "^3.0.0",
     "node-sass": "^4.14.0"
   }
 }
